# pmtarray

./: .gitignore  README.md  build_docs.sh  pyproject.toml
docs/: array.html  index.html  unit.html
docs/models/: R11410.html  R12699.html  index.html  model_lib.html
docs/scripts/: index.html  script_pmtarray.html  script_pmtunit.html
notebooks/: PMTarray.ipynb  PMTunits.ipynb
src/pmtarray/: __init__.py  array.py  unit.py
src/pmtarray/models/: R11410.py  R12699.py  __init__.py  model_lib.py
src/pmtarray/scripts/: __init__.py  script_pmtarray.py  script_pmtunit.py
